Section 8 Load balancing/Manifests/6-istio-rules.yaml
kind: VirtualService
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: a-set-of-routing-rules-we-can-call-this-anything   # "just" a name for this virtualservice
  namespace: default                                       # target namespace
spec:
  hosts:
    - fleetman-staff-service.default.svc.cluster.local     
    # FQDN (fully qualified domain name) if we call the service from another namespace (recommended)
    # or The Service DNS (ie the regular K8S Service) - 'fleetman-staff-service' if we call the service from same namespace 
  http:
    - route:
        - destination:                                                   # first destination - old app version
            host: fleetman-staff-service.default.svc.cluster.local       # The Target DNS name - FQDN
            subset: safe-group                                           # The name defined in the DestinationRule
          weight: 90                    # traffic procentage 
        - destination:                                                   # second destination - new app version
            host: fleetman-staff-service.default.svc.cluster.local       # The Target DNS name - FQDN
            subset: risky-group                                          # The name defined in the DestinationRule
          weight: 10                    # traffic procentage
